gerer la suppression et la modification
